syntax = "proto3";
package schema.v2;

import "v2/project_source.proto";

message GenerateDynamicDocRequest {
  int32 project_generate_queue_id = 1;
  ProjectSource project_source = 2;
  Git git = 3;
  int32 project_id = 4;
  string project_uuid = 5;
}
